--- a/assignments/lesson-4/css/small-4.css
+++ b/assignments/lesson-4/css/small-4.css
@@ -1,12 +1,14 @@
+#img-logo
+{
+  width:30%;
+  height:30%;
+}
+
 body 
 {
 	background-color: #bbbb;
 }
 
-body {
-    font-family: 'Tangerine', serif;
-    font-size: 48px;
-  }
 header
 {
 	margin: 10px auto;
@@ -14,18 +16,18 @@ header
 	border: 1px solid #bbb;
 	box-shadow: 0 0 30px #777;
 	text-align: center;
-    font-family: 'Tangerine', serif;
 }
 
 #header-h1
 {
-    font-size: 30px;
+    font-family: 'Tangerine', serif;
+    font-size: 50px;
     text-shadow: 4px 4px 4px #aaa;
 } 
 .motto
 {
     font-style: italic;
-    font-size: 14px;
+    font-size: 20px;
 }
 
 header img, .headings 
