--- a/assignments/lesson-4/css/small-4.css
+++ b/assignments/lesson-4/css/small-4.css
@@ -23,21 +23,23 @@ header
 #header-h1
 {
     font-family: 'Tangerine', serif;
-    font-size: 50px;
-    text-shadow: 4px 4px 4px #aaa;
+    font-size: 60px;
+    text-shadow: 5px 5px 5px #aaa;
 } 
 
 header img, .headings 
 {
 	display: inline-block;
 	vertical-align: middle;
-	margin: 0px;
+	margin: 2px;
 }
 
 .motto
 {
     font-style: italic;
     font-size: 20px;
+    margin: 5px;
+    padding: 5px;
 }
 
 nav
@@ -47,12 +49,12 @@ nav
 }
 nav ul
 {
-    margin:0px;
+    margin:10px;
     padding: 0px;
 }
 nav li
 {
-    display: inline;
+    display: block;
     margin-right: 1em;
 }
 
@@ -65,31 +67,37 @@ nav li > a
     text-decoration: none;
 }
 
+.active 
+{
+    background-color: #4CAF50;
+}
 body 
-    {
-        font-size: 16px;
-        line-height: 22px;
-        font-family: Ubuntu, sans-serif;
-        color: #990000;
-    }
+{
+    font-size: 16px;
+    line-height: 22px;
+    font-family: Ubuntu, sans-serif;
+    color: #990000;
+}
+
 h1  
-    {
-        font-size: 25px;
-        color: #000000;
-        text-align: center;
-    }
+{
+    font-size: 25px;
+    color: #000000;
+    text-align: center;
+}
 
 h2  
-    {
-        font-size: 18px;
-        text-align: center;
-        border-bottom: 1px solid #bbb;
-    }
+{
+    font-size: 18px;
+    text-align: center;
+    border-bottom: 1px solid #bbb;
+}
 
 footer 
-    {
-        margin: 1.25rem auto;
-        padding: .5rem;
-        max-width: 900px;
-        font-size: 10px;
-    }
+{
+    margin: 1.25rem auto;
+    padding: .5rem;
+    max-width: 900px;
+    font-size: 10px;
+    text-align: center;
+}
