--- a/assignments/CIT261W05/style.css
+++ b/assignments/CIT261W05/style.css
@@ -1,46 +1,65 @@
-body {
+body 
+{
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
       Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  main > h1 {
+}
+
+main > h1 
+{
     text-align: center;
     background-color: indianred;
     padding: 1em;
     margin-top: 0;
     margin-bottom: -0.5em;
-  }
-  img {
+}
+
+img 
+{
     max-width: 100%;
-  }
-  .hikeStyles {
+}
+
+.hikeStyles 
+{
     padding: 0;
     margin: 1em 0;
     list-style-type: none;
-  }
-  .hikeStyles div {
+}
+
+.hikeStyles div 
+{
     padding: 0 0.5em;
-  }
-  .hikeStyles li > h2 {
+}
+
+.hikeStyles li > h2 
+{
     text-align: center;
     background-color: burlywood;
     margin-bottom: 0.5em;
-  }
-  .light {
+}
+
+.light 
+{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-  }
-  .light > h2 {
+}
+
+.light > h2 
+{
     width: 100%;
     flex: 1 0 auto;
-  }
-  .light > div {
+}
+
+.light > div 
+{
     width: 40%;
     margin-left: 1em;
     flex: 1 1 auto;
-  }
-  .light h3 {
+}
+
+.light h3 
+{
     margin-bottom: -0.5em;
-  }
+}
