--- a/assignments/CIT261W05/style.css
+++ b/assignments/CIT261W05/style.css
@@ -9,6 +9,7 @@ body
 main > h1 
 {
     text-align: center;
+    font-size: 40px;
     background-color:#9ac78c;
     padding: 1em;
     margin-top: 0;
