--- a/assignments/CIT261W05/style.css
+++ b/assignments/CIT261W05/style.css
@@ -9,8 +9,8 @@ body
 main > h1 
 {
     text-align: center;
-    font-size: 40px;
-    background-color:#9ac78c;
+    font-size: 70px;
+    background-color:#57bbae;
     padding: 1em;
     margin-top: 0;
     margin-bottom: -0.5em;
