--- a/assignments/CIT261W05/style.css
+++ b/assignments/CIT261W05/style.css
@@ -14,7 +14,7 @@ main > h1
     padding: 1em;
     margin-top: 0;
     margin-bottom: -0.5em;
-    font-family: 'Rancho', serif;
+    font-family: 'Rancho', cursive;
 }
 
 img 
