--- a/assignments/lesson-5/css/small-5.css
+++ b/assignments/lesson-5/css/small-5.css
@@ -50,19 +50,26 @@ header img, .headings
     color: black;
 }
 
-.navigation {list-style: none; text-align: center;background: #02c2a9;}
-.navigation li:first-child { display: block;}
-.navigation li 
- {
-  display: block;
-  font-size: 20px;
-  padding: 3px;
- }
- .navigation li a {display: block;	color: black; padding: 0px;	text-align: center;	text-decoration: none;}
+nav
+{
+    background: #02c2a9;
+}
 
 nav ul
 {
     padding: 0px;
+}
+
+nav li
+{
+    display: block;
+    font-size: 20px;
+    padding: 3px;
+}
+
+nav li a
+{
+    color: black;
 }
 
 nav li > a 
