--- a/assignments/lesson-5/css/small-5.css
+++ b/assignments/lesson-5/css/small-5.css
@@ -50,6 +50,11 @@ header img, .headings
     color: black;
 }
 
+.navigation {list-style: none; text-align: center; }
+.navigation li:first-child { display: block;}
+.navigation li {display: none;}
+.navigation a  {display: block;	color: #fff; padding: 0px;	text-align: center;	text-decoration: none;}
+  
 nav
 {
     background: #02c2a9;
