--- a/assignments/lesson-5/css/small-5.css
+++ b/assignments/lesson-5/css/small-5.css
@@ -16,7 +16,7 @@
     max-width: 100%;
     min-width: 80%;
     height: auto;
-    padding: 20px;
+    padding: 10px;
 }
 
 header
@@ -50,11 +50,6 @@ header img, .headings
     color: black;
 }
 
-.navigation {list-style: none; text-align: center; }
-.navigation li:first-child { display: block;}
-.navigation li {display: none;}
-.navigation a  {display: block;	color: #fff; padding: 0px;	text-align: center;	text-decoration: none;}
-  
 nav
 {
     background: #02c2a9;
@@ -82,6 +77,11 @@ nav li > a
     text-decoration: none;
 }
 
+.navigation {list-style: none; text-align: center; }
+.navigation li:first-child { display: block;}
+.navigation li {display: none;}
+.navigation a  {display: block;	color: #fff; padding: 0px;	text-align: center;	text-decoration: none;}
+
 .active 
 {
     background: green;
@@ -93,6 +93,23 @@ body
     line-height: 22px;
     font-family: Ubuntu, sans-serif;
     color: black;
+}
+
+.w-preston-div
+{
+    position: relative;
+    margin: 10px auto;
+}
+.preston-stats 
+{
+	position: absolute;
+	top: 15px;
+	left: 15px;
+    background:  #02c2a9;
+    opacity: 0.6;
+	border: 1px solid #000;
+	padding: 1.5rem;
+	box-shadow: 0 0 5px rgb(172, 164, 164);
 }
 
 h4
