--- a/assignments/lesson-5/css/small-5.css
+++ b/assignments/lesson-5/css/small-5.css
@@ -13,10 +13,13 @@
 
 #img-preston
 {
-    max-width: 100%;
-    min-width: 80%;
+    max-width: 90%;
+    min-width: 70%;
     height: auto;
     padding: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 header
@@ -128,6 +131,19 @@ body
 h4
 {
     text-align: center;
+}
+
+.preston-5-day h5
+{
+    text-align: center;
+}
+
+.preston-5-day img
+{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 40px;
 }
 
 #main-h1
