--- a/assignments/lesson-5/css/small-5.css
+++ b/assignments/lesson-5/css/small-5.css
@@ -13,6 +13,7 @@
 
 #img-preston
 {
+    position: absolute;
     max-width: 100%;
     min-width: 70%;
     height: auto;
@@ -52,39 +53,18 @@ header img, .headings
     color: black;
 }
 
-nav
-{
-    background: #02c2a9;
-}
 
-nav ul
-{
-    padding: 0px;
-}
+nav {	margin: 0 auto;	max-width: 760px; background-color: #000;	}
+.navigation { list-style: none; text-align: center; }
+.navigation li:first-child { display: block;}
+.navigation li { display: none;}
+.navigation a {	display: block;	color: #fff; padding: .75rem;	text-align: center;	text-decoration: none;}
+.navigation a:hover {	color: #000; background-color: #fff; font-weight: 700;	}
 
-nav li
-{
-    display: block;
-    font-size: 20px;
-    padding: 3px;
-}
-
-nav li a
-{
-    color: black;
-    padding: .75rem;
-}
-
-nav li a:hover
-{
-    color: white;
-    background-color: rgb(10, 56, 20);
-}
-
-nav li > a 
-{
-    text-decoration: none;
-}
+/* the onclick JS toggles the .repsonsive class from display none (.navigation li) to display block because the repsonsive class is added to the end of the class list like this in HTML Line #6.
+  <ul class="navigation responsive">
+*/
+.responsive li { display: block; }
 
 .active 
 {
@@ -139,6 +119,10 @@ h4
     text-align: center;
 }
 
+.preston-5-day
+{
+    position: relative;
+}
 .preston-5-day h3
 {
     text-align: center;
@@ -146,6 +130,7 @@ h4
 
 .preston-5-day img
 {
+    position: absolute;
     max-width: 100%;
     min-width: 70%;
     height: auto;
