--- a/assignments/lesson-5/css/large-5.css
+++ b/assignments/lesson-5/css/large-5.css
@@ -1,6 +1,11 @@
-/* Media Query for medium + screens */
-@media only screen and (min-width: 32.5em) {
+/* the onclick JS toggles the .repsonsive class from display none (.navigation li) to display block because the repsonsive class is added to the end of the class list like this in HTML Line #6.
+  <ul class="navigation responsive">
+*/
+.responsive li { display: block; }
+
+@media only screen and (min-width: 32.5em) 
+{
     .navigation li:first-child { display: none;	}
-      .navigation li { display: inline-block; margin-right: 1rem;}	
-      .navigation li a { color: yellow;}
-  }
+    .navigation li { display: inline-block; margin-right: 1rem;}	
+    .navigation li a { color: yellow;}
+}
