--- a/assignments/lesson-5/css/small-5.css
+++ b/assignments/lesson-5/css/small-5.css
@@ -217,6 +217,9 @@ footer
 
   .final-page img
   {
+    max-width: 100%;
+    min-width: 70%;
+    height: auto;
     position: relative;
     margin: 10px;
     border: 0px;
