--- a/assignments/lesson-5/css/small-5.css
+++ b/assignments/lesson-5/css/small-5.css
@@ -222,7 +222,7 @@ nav {	margin: 0 auto;	background-color: rgb(86, 167, 156);	}
 .navigation { list-style: none; text-align: center; }
   .navigation li:first-child { display: block;}
   .navigation li {display: none;}
-  .navigation a {display: block;	color: #fff; padding: .75rem;	text-align: center;	text-decoration: none;}
+  .navigation a {display: block; color: #fff; text-align: center; text-decoration: none;}
   .navigation a:hover {	color: #000; background-color: #fff; font-weight: 700;	}
 
  .responsive li { display: block; }
