--- a/assignments/lesson-5/css/large-5.css
+++ b/assignments/lesson-5/css/large-5.css
@@ -4,5 +4,17 @@
     .navigation li:first-child { display: none;	}
     .navigation li { display: inline-block;}	
     .navigation li a { color: rgb(34, 18, 56);}
-    .preston-5-day {display:none;}
+        
+    .preston-5-day{position: relative;display:block;}
+    .preston-5-day h3{text-align: center;}
+
+    .preston-5-day img
+    {
+        max-width: 100%;
+        min-width: 70%;
+        height: auto;
+        padding: 10px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
