--- a/assignments/lesson-5/css/large-5.css
+++ b/assignments/lesson-5/css/large-5.css
@@ -10,11 +10,9 @@
 
     .preston-5-day img
     {
-        max-width: 100%;
-        min-width: 70%;
-        height: auto;
-        padding: 10px;
+        display: block;
         margin-left: auto;
         margin-right: auto;
+        width: 50%;
     }
 }
