--- a/assignments/lesson-6/css/large-6.css
+++ b/assignments/lesson-6/css/large-6.css
@@ -1,5 +1,5 @@
 /* Media Query for medium + screens */
-@media only screen and (min-width: 32.5em) 
+@media only screen and (min-width: 550px) 
 {
     .navigation li:first-child { display: none;	}
     .navigation li { display: inline-block;}	
@@ -15,4 +15,11 @@
         margin-right: auto;
         width: 50%;
     }
+
+    .text-overlay:before 
+    {
+        content: "LARGE";
+    }
+    
+    
 }
