--- a/assignments/lesson-7/css/large-7.css
+++ b/assignments/lesson-7/css/large-7.css
@@ -1,5 +1,5 @@
 /* Media Query for medium + screens */
-@media only screen and (min-width: 550px) 
+@media only screen and (min-width: 769px) 
 {
     .navigation li:first-child 
     { 
@@ -48,5 +48,14 @@
     {
         content: "Large";
     }
-    
+ 
+    .grid-container 
+    {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    justify-items: center;
+    align-items: center;
+    }
+
 }
