--- a/assignments/lesson-10/css/large-10.css
+++ b/assignments/lesson-10/css/large-10.css
@@ -86,5 +86,9 @@
         font-weight: bold;
         margin: 15px;
     }
-    
+
+    .articles
+    {
+        margin: 5px 144px 5px 144px;
+    }        
 }
