--- a/assignments/weathersite/css/large.css
+++ b/assignments/weathersite/css/large.css
@@ -2,6 +2,10 @@
 @media only screen and (min-width: 769px) 
 {
     /********************************** MENU NAVIGATION CODE **************************/
+    #img-logo
+    {
+        max-width: 15%;
+    }
 
     .navigation li:first-child 
     { 
@@ -28,12 +32,7 @@
          flex-direction: row; 
     }
     
-/********************************** STATS CODE **************************/
-    .text-overlay:before 
-    {
-        content: "Large";
-    }
- 
+
 /********************************** 5 DAYS FORECAST CODE **************************/
     .preston-5-day
     {
@@ -103,5 +102,16 @@
     .grid-item:hover 
     {
         box-shadow: 0 0 20px #333;
+    }
+
+    /* Code FINAL PAGE */
+    .final-page  
+    {
+    grid-template-columns: 1fr 1fr;
+    }
+
+    .articles
+    {
+    margin: 5px 144px 5px 144px;
     }
 }
